# ai-T

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_PLAN.md  LICENSE  NEW_GOAL.md  OPTIMIZATION_SUMMARY.md  README.md  REFACTORING_SOLUTION_CN.md  REFACTORING_SUMMARY.md  RELEASE_GUIDE.md  SOLUTION_CN.md  clippy.toml  deny.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  security.yml
src/: error.rs  main.rs
src/api/: AGENT.md  client.rs  mod.rs  translator.rs
src/channel/: AGENT.md  channel.rs  mod.rs
src/services/: mod.rs
src/services/audio/: mod.rs  player.rs
src/services/tts/: mod.rs
src/ui/: AGENT.md  app.rs  display.rs  mod.rs  settings.rs  sidebar.rs  theme.rs
src/utils/: AGENT.md  cache.rs  config.rs  logger.rs  macros.rs  mod.rs
