[package]
name = "ai-translate"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33"
eframe = "0.33"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
