[package]
name = "ai-translate"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A cross-platform AI translation tool with streaming support"
license = "MIT"
repository = "https://github.com/AnlangA/ai-T"
homepage = "https://github.com/AnlangA/ai-T"

[dependencies]
egui = "0.33"
eframe = { version = "0.33", features = ["persistence"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
