[package]
name = "ai-translate"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A cross-platform AI translation tool with streaming support"
license = "MIT"
repository = "https://github.com/AnlangA/ai-T"
homepage = "https://github.com/AnlangA/ai-T"

[dependencies]
egui = "0.33"
eframe = { version = "0.33", features = ["persistence"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
dirs = "5.0"
text2audio = "0.1.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
